--- a/index.html
+++ b/index.html
@@ -456,8 +456,9 @@ function onFrame(event) {
    }
    boids[i].run(boids);
  }
- if (globals.gvy > 20){
-   boids.push(new Boid(position, 10, 0.05))
+ if (globals.gvy > 0.5 || globals.gvy < 0.5){
+   boids.push(new Boid(position, 10, 0.05));
+   console.log("made");
  }
 
 
