--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div>
           <div class="inner-text">Beside you is a wire case attached to the wall</div>
           <div class="inner-text">
-          Here you can prepare your mobile companion for the pilgrimage ahead</div>
+          Here you can prepare your mobile companion for the encounter ahead</div>
           <div class="inner-text">(swipe)</div>
         </div>
     </div>
@@ -55,59 +55,56 @@
       <div>
         <div class="inner-text">When was the last time you cleansed this screen?</div>
         <div class="inner-text">Dusted away debris from it’s orifices</div>
-        <div class="inner-text">Where has your mechanical partner been with you?</div>
+        <div class="inner-text">What surfaces has it been in contact with?</div>
       </div>
     </div>
     <div id="s4" class="swiper-slide">
       <div>
         <div class="inner-text">You can decorate if you wish</div>
-        <div class="inner-text">Do you think it understands the sentiment of these little faces just like you?
+        <div class="inner-text">How do you think your mechanical companion translates these little faces?
         </div>
       </div>
     </div>
     <div id= "s5" class="swiper-slide">
       <div>
-        <div class="inner-text">How much personalisation have you done?</div>
-        <div class="inner-text">This is your confident through which you share, watch, work, socialise and play</div>
+        <div class="inner-text">How have you personalised this tool?</div>
+        <div class="OS"></div>
       </div>
     </div>
     <div id= "s6" class="swiper-slide">
+      <div>
+        <div class="inner-text">Your confident through which you share, watch, work, socialise and play</div>
+    </div>
+    </div>
+    <div id= "s7" class="swiper-slide">
       <div>
         <div class="inner-text">Listening, tracking, interpreting, predicting and transfers your personal world</div>
         <div class="inner-text">Creating a mishapen shadow</div>
     </div>
   </div>
-    <div id= "s7" class="swiper-slide">
-      <div>
-        <div id="OS" class="inner-text"></div>
-        <div class="inner-text"></div>
-    </div>
-    </div>
     <div id= "s8" class="swiper-slide">
       <div>
-        <div class="inner-text">Whilst you browse do you ever think about what information is slipping through?</div>
-        <div id="referrer" class="inner-text"></div>
-        <div class="inner-text">Or do you never think about it?</div>
+        <div class="inner-text">Do you ever think of how this is being interpreted?</div>
+        <div class="inner-text">Used to interpret or teach other systems</div>
     </div>
     </div>
 
     <div id= "s9"  class="swiper-slide">
       <div>
-        <div class="inner-text">Now I would like you to stand a apart from others</div>
+        <div class="inner-text">Now I would like you to stand further away on your own</div>
         <div class="inner-text">This is an experience for you and your own mechanical assistant</div>
       </div>
     </div>
     <div "s10" class="swiper-slide">
       <div>
-        <div class="inner-text">You've given substantial immaterial, untangible information away</div>
-        <div class="inner-text">Small flicks of fingers and bumps in pockets.</div>
-        <div class="inner-text">A tool we cease to acknowledge.</div>
+        <div class="inner-text">To this machine you constantly you give immaterial, untangible information away</div>
+        <div class="inner-text">Small flicks of fingers and bumps in pockets</div>
     </div>
     </div>
     <div id="s11" class="swiper-slide">
       <div>
         <div class="inner-text">Stand facing the N on the floor</div>
-        <div class="inner-text">Use the compass on the following screen to find South</div>
+        <div class="inner-text">Use the compass numbers on the following screen to find South</div>
     </div>
     </div>
     <div id="s12" class="swiper-slide swiper-no-swiping">
@@ -139,8 +136,9 @@
     </div>
     <div id="s17" class="swiper-slide">
       <div>
-        <div class="inner-text">On the next page you will be drawing whilst moving your device</div>
-        <div class="inner-text">Draw the transfer of this intimate exchange to analysed data </div>
+        <div class="inner-text">On the next page you will be drawing through moving your phone around</div>
+        <div class="inner-text">Learn, explore, create</div>
+        <div class="inner-text">Watch the manifestations of your actions</div>
       </div>
     </div>
     <div id="s18" class="swiper-slide">
@@ -148,21 +146,29 @@
     </div>
     <div id="s19" class="swiper-slide">
       <div>
-        <div class="inner-text">This data leak does not just concern you</div>
-        <div class="inner-text">Not just your human recipient </div>
-        <div class="inner-text">Not just your human recipient </div>
+        <div class="inner-text">Think of that interaction</div>
+        <div class="inner-text">Your digital recipiants and your </div>
+        <div class="inner-text">Not just your human recipient</div>
       </div>
     </div>
     <div id="s20" class="swiper-slide">
-      <canvas id="myCanvas2"></canvas>
-    </div>
-    <div id="s19" class="swiper-slide">
-
-    </div>
-    <div id="s20" class="swiper-slide">
-      <canvas id="myCanvas3"></canvas>
+      <div class="inner-text">Think of that interaction</div>
+      <div class="inner-text">Your digital recipiants and your </div>
+      <div class="inner-text">Not just your human recipient</div>
     </div>
     <div id="s21" class="swiper-slide">
+      <div class="inner-text">Think of that interaction</div>
+      <div class="inner-text">Your digital recipiants and your </div>
+      <div class="inner-text">Not just your human recipient</div>
+      <canvas id="myCanvas2"></canvas>
+    </div>
+    <div id="s22" class="swiper-slide">
+
+    </div>
+    <div id="s23" class="swiper-slide">
+      <canvas id="myCanvas3"></canvas>
+    </div>
+    <div id="s24" class="swiper-slide">
       <canvas id="myCanvas4"></canvas>
     </div>
 
