--- a/index.html
+++ b/index.html
@@ -152,15 +152,19 @@
       </div>
     </div>
     <div id="s20" class="swiper-slide">
+      <div>
       <div class="inner-text">Think of that interaction</div>
       <div class="inner-text">Your digital recipiants and your </div>
       <div class="inner-text">Not just your human recipient</div>
     </div>
+    </div>
     <div id="s21" class="swiper-slide">
-      <div class="inner-text">Think of that interaction</div>
-      <div class="inner-text">Your digital recipiants and your </div>
-      <div class="inner-text">Not just your human recipient</div>
-      <canvas id="myCanvas2"></canvas>
+
+      <canvas id="myCanvas2">
+        <div class="inner-text">Think of that interaction</div>
+        <div class="inner-text">Your digital recipiants and your </div>
+        <div class="inner-text">Not just your human recipient</div>
+      </canvas>
     </div>
     <div id="s22" class="swiper-slide">
 
