chage text change where tadpoles are release

--- a/index.html
+++ b/index.html
@@ -153,27 +153,39 @@
     </div>
     <div id="s20" class="swiper-slide">
       <div>
-      <div class="inner-text">Think of that interaction</div>
-      <div class="inner-text">Your digital recipiants and your </div>
-      <div class="inner-text">Not just your human recipient</div>
+      <div class="inner-text">Do you think you have a digital double?</div>
+      <div class="inner-text">Or an inconceivable magnitude of interconnected data sets?</div>
     </div>
     </div>
     <div id="s21" class="swiper-slide">
 
       <canvas id="myCanvas2">
-        <div class="inner-text">Think of that interaction</div>
-        <div class="inner-text">Your digital recipiants and your </div>
-        <div class="inner-text">Not just your human recipient</div>
       </canvas>
     </div>
     <div id="s22" class="swiper-slide">
-
+      <div>
+      <div class="inner-text">Do you feel in control of your privat sphere?</div>
+      <div class="inner-text">You can manipulate the next shape with fast gestures</div>
+      <div class="inner-text"> Command the shape and speed with your body</div>
+    </div>
     </div>
     <div id="s23" class="swiper-slide">
       <canvas id="myCanvas3"></canvas>
     </div>
+    <div id="s22" class="swiper-slide">
+      <div>
+      <div class="inner-text">For our final interaction</div>
+      <div class="inner-text">Lift your phone to the sky as you create an abundance of data tadpoles</div>
+    </div>
+    </div>
     <div id="s24" class="swiper-slide">
       <canvas id="myCanvas4"></canvas>
+    </div>
+    <div id="s25" class="swiper-slide">
+      <div>
+      <div class="inner-text">Thank you for your exchange</div>
+      <div id="social" class="inner-text">I hope you enjoyed this data dance with your faithful companion</div>
+    </div>
     </div>
 
   </div>
