--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 //initialise globals
 window.onload;
 window.globals = {
-  gx:0, gy:0, gz:0, gvx:0, gvy:0, canvasx: 0, canvasy: 0,
+  gx:0, gy:0, gz:0, gvx:0, gvy:0, gvz:0, canvasx: 0, canvasy: 0,
 };
 
 globals.canvasx = window.screen.width;
