--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div id= "s5" class="swiper-slide">
       <div>
         <div class="inner-text">How have you personalised this tool?</div>
-        <div class="OS"></div>
+        <div id="OS" class="inner-text"></div>
       </div>
     </div>
     <div id= "s6" class="swiper-slide">
