--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div id= "s6" class="swiper-slide">
       <div>
-        <div class="inner-text">Your confident through which you share, watch, work, socialise and play</div>
+        <div class="inner-text">Your confidant through which you share, watch, work, socialise and play</div>
     </div>
     </div>
     <div id= "s7" class="swiper-slide">
@@ -97,8 +97,9 @@
     </div>
     <div "s10" class="swiper-slide">
       <div>
-        <div class="inner-text">To this machine you constantly you give immaterial, untangible information away</div>
+        <div class="inner-text">To this machine you constantly give information away trading for services</div>
         <div class="inner-text">Small flicks of fingers and bumps in pockets</div>
+        <div class="inner-text">When you think of these parts of you what does it look like?</div>
     </div>
     </div>
     <div id="s11" class="swiper-slide">
@@ -147,14 +148,14 @@
     <div id="s19" class="swiper-slide">
       <div>
         <div class="inner-text">Think of that interaction</div>
-        <div class="inner-text">Your digital recipiants and your </div>
-        <div class="inner-text">Not just your human recipient</div>
+        <div class="inner-text">The emotional visceral experience</div>
+        <div class="inner-text">And the physical interface</div>
       </div>
     </div>
     <div id="s20" class="swiper-slide">
       <div>
       <div class="inner-text">Do you think you have a digital double?</div>
-      <div class="inner-text">Or an inconceivable magnitude of interconnected data sets?</div>
+      <div class="inner-text">An inconceivable magnitude of interconnected data sets?</div>
     </div>
     </div>
     <div id="s21" class="swiper-slide">
@@ -164,7 +165,7 @@
     </div>
     <div id="s22" class="swiper-slide">
       <div>
-      <div class="inner-text">Do you feel in control of your privat sphere?</div>
+      <div class="inner-text">Do you feel in control of your private sphere?</div>
       <div class="inner-text">You can manipulate the next shape with fast gestures</div>
       <div class="inner-text"> Command the shape and speed with your body</div>
     </div>
@@ -181,9 +182,9 @@
     <div id="s24" class="swiper-slide">
       <canvas id="myCanvas4"></canvas>
     </div>
-    <div id="s25" class="swiper-slide">
+    <div id="s26" class="swiper-slide">
       <div>
-      <div class="inner-text">Thank you for your exchange</div>
+      <div class="inner-text">Thank you for your for your data trade</div>
       <div id="social" class="inner-text">I hope you enjoyed this data dance with your faithful companion</div>
     </div>
     </div>
