add icon fix inner html error

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
 <title>Something Given</title>
+<link rel="icon" href="icon.jpg">
 <!-- css file-->
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <!--Swiper-->
@@ -67,8 +68,8 @@
     </div>
     <div id= "s5" class="swiper-slide">
       <div>
-        <div class="inner-text">How have you personalised this tool?</div>
         <div id="OS" class="inner-text"></div>
+        <div class="inner-text">Does it spark joy?</div>
       </div>
     </div>
     <div id= "s6" class="swiper-slide">
@@ -84,8 +85,8 @@
   </div>
     <div id= "s8" class="swiper-slide">
       <div>
-        <div class="inner-text">Do you ever think of how this is being interpreted?</div>
-        <div class="inner-text">Used to interpret or teach other systems</div>
+        <div class="inner-text">Do you ever think of the algorithms predicting your mood?</div>
+        <div class="inner-text">Or what parts of a machine have learnt from you?</div>
     </div>
     </div>
 
@@ -99,7 +100,6 @@
       <div>
         <div class="inner-text">To this machine you constantly give information away trading for services</div>
         <div class="inner-text">Small flicks of fingers and bumps in pockets</div>
-        <div class="inner-text">When you think of these parts of you what does it look like?</div>
     </div>
     </div>
     <div id="s11" class="swiper-slide">
@@ -231,7 +231,6 @@ window.addEventListener("devicemotion", handleMotion, true);
 }
   });
 </script>
-
 <!-- Line animation script-->
 <script type="text/javascript" src="animations.js"></script>
 </body>
