--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
     <div id="s11" class="swiper-slide">
       <div>
-        <div class="inner-text">Stand facing the N on the floor</div>
+        <div class="inner-text">Stand facing of the N on the floor</div>
         <div class="inner-text">Use the compass numbers on the following screen to find South</div>
     </div>
     </div>
