--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
     </div>
     <div id="s16" class="swiper-slide">
       <div>
-        <div class="inner-text">Take as long as you need</div>
+        <div class="inner-text">What was the visceral feeling of the interaction?</div>
+        <div class="inner-text">How did you touch the interface?</div>
       </div>
     </div>
     <div id="s17" class="swiper-slide">
@@ -148,14 +149,14 @@
     <div id="s19" class="swiper-slide">
       <div>
         <div class="inner-text">Think of that interaction</div>
-        <div class="inner-text">The emotional visceral experience</div>
-        <div class="inner-text">And the physical interface</div>
+        <div class="inner-text">What data leaked out of the emotional and into the detached word?</div>
       </div>
     </div>
     <div id="s20" class="swiper-slide">
       <div>
       <div class="inner-text">Do you think you have a digital double?</div>
-      <div class="inner-text">An inconceivable magnitude of interconnected data sets?</div>
+      <div class="inner-text">Or an inconceivable magnitude of interconnected data sets?</div>
+      <div class="inner-text">How does it exist separated from you?</div>
     </div>
     </div>
     <div id="s21" class="swiper-slide">
@@ -166,6 +167,10 @@
     <div id="s22" class="swiper-slide">
       <div>
       <div class="inner-text">Do you feel in control of your private sphere?</div>
+    </div>
+    </div>
+    <div id="s22" class="swiper-slide">
+      <div>
       <div class="inner-text">You can manipulate the next shape with fast gestures</div>
       <div class="inner-text"> Command the shape and speed with your body</div>
     </div>
@@ -184,7 +189,7 @@
     </div>
     <div id="s26" class="swiper-slide">
       <div>
-      <div class="inner-text">Thank you for your for your data trade</div>
+      <div class="inner-text">Thank you for your for your exchange</div>
       <div id="social" class="inner-text">I hope you enjoyed this data dance with your faithful companion</div>
     </div>
     </div>
