--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="inner-text">Use the compass numbers on the following screen to find South</div>
     </div>
     </div>
-    <div id="s12" class="swiper-slide swiper-no-swiping">
+    <div id="s12" class="swiper-slide">
       <p class="inner-text"></p>
     </div>
     <div id="s13" class="swiper-slide">
